pagina de detalhe de agencia

--- a/templates/agencias/lista.html.twig
+++ b/templates/agencias/lista.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
     <ul class="list-group">
        {% for agencia in agencias %}
-            <li class="list-group-item">{{agencia}}</li>
+            <li class="list-group-item"> <a href='agencia/{{agencia}}'>{{agencia}}</a></li>
         {% endfor %} 
     </ul>
     
