--- a/templates/admin/agencias.html.twig
+++ b/templates/admin/agencias.html.twig
@@ -1,4 +1,11 @@
 {% extends "base.html.twig" %}
+<!--Administrador-->
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="/assets/js/usuarios.js"></script>
+{% endblock %}
+
 {% block body %}
 
      <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -16,9 +23,4 @@
     
     </div>
   </div>
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    <script src="/assets/js/usuarios.js"></script>
 {% endblock %}
