--- a/templates/agencias/lista.html.twig
+++ b/templates/agencias/lista.html.twig
@@ -10,7 +10,7 @@
       <a id="adicionar_agencia" class="btn btn-outline-success my-2 my-sm-0">Adicionar</a>
     </form>
        {% for agencia in agencias %}
-            <li class="list-group-item"> <a href='agencia/{{agencia}}'>{{agencia}}</a></li>
+            <li class="list-group-item"> <a href='agencia/{{agencia}}/detalhes'>{{agencia}}</a></li>
         {% endfor %} 
     </ul>
     
