adicionando agencia no front

--- a/templates/admin/agencias.html.twig
+++ b/templates/admin/agencias.html.twig
@@ -4,7 +4,7 @@
      <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron">
    <div class="container">
-        <div class=" card pb-5">
+        <div class=" card pb-3">
             <div class="card-header">
                     Cadastrar agência
             </div>  
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="container">
-        <div class=" card mt-5">
+        <div class=" card mt-3">
             <div class="card-header">
                 Agências cadastradas
             </div>  
@@ -30,7 +30,7 @@
                         
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="tbody">
                         {% for agencia in agencias %}
                             <tr>
                             <th scope="row">1</th>
