separando dashboards por corees

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,9 +51,10 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
   </head>
   
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top ">
   <a class="navbar-brand" href="{{path('app_home_page')}}">Início</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
