--- a/templates/admin/agencias.html.twig
+++ b/templates/admin/agencias.html.twig
@@ -1,4 +1,8 @@
 {% extends "base.html.twig" %}
+{% block stylesheets %}
+  <link rel="stylesheet" href="/assets/css/admin/admin.css">
+{% endblock %}
+
 {% block body %}
 
      <!-- Main jumbotron for a primary marketing message or call to action -->
