--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,8 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-       
+        <div class="container">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
