--- a/templates/gerentes/_delete_form.html.twig
+++ b/templates/gerentes/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_gerentes_delete', {'id': gerente.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ gerente.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Deletar</button>
 </form>
