--- a/templates/gerentes/_form.html.twig
+++ b/templates/gerentes/_form.html.twig
@@ -7,7 +7,7 @@
         {% endfor %}
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Voltar</button>
+        <a type="button" class="btn btn-secondary" data-dismiss="modal" href="{{ path('app_gerentes_index') }}">Voltar</a>
         <button class="btn btn-primary">{{ button_label|default('Salvar') }}</button>
     </div>
    
