--- a/templates/gerentes/edit.html.twig
+++ b/templates/gerentes/edit.html.twig
@@ -4,11 +4,9 @@
 
 {% block body %}
 
-    <h1>Edit Gerentes</h1>
+    <h5>Editar Gerente</h5>
 
-    {{ include('gerentes/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_gerentes_index') }}">back to list</a>
+    {{ include('gerentes/_form.html.twig', {'button_label': 'Atualizar'}) }}
 
     {{ include('gerentes/_delete_form.html.twig') }}
 {% endblock %}
