--- a/templates/gerentes/show.html.twig
+++ b/templates/gerentes/show.html.twig
@@ -25,10 +25,11 @@
             </tr>
         </tbody>
     </table>
+    <div class="d-flex flex-row justify-content-end">
+        <a href="{{ path('app_gerentes_index') }}" class="btn btn-secondary mr-2">Voltar</a>
 
-    <a href="{{ path('app_gerentes_index') }}">back to list</a>
+        <a href="{{ path('app_gerentes_edit', {'id': gerente.id}) }}" class="btn btn-primary mr-2" >Editar</a>
 
-    <a href="{{ path('app_gerentes_edit', {'id': gerente.id}) }}">edit</a>
-
-    {{ include('gerentes/_delete_form.html.twig') }}
+        {{ include('gerentes/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
