--- a/templates/gerentes/edit.html.twig
+++ b/templates/gerentes/edit.html.twig
@@ -3,10 +3,11 @@
 {% block title %}Edit Gerentes{% endblock %}
 
 {% block body %}
-
-    <h5>Editar Gerente</h5>
-
-    {{ include('gerentes/_form.html.twig', {'button_label': 'Atualizar'}) }}
-
-    {{ include('gerentes/_delete_form.html.twig') }}
+    <div class="card">
+        <div class="card-header">
+            <h5>Editar Gerente</h5>
+        </div>
+        
+            {{ include('gerentes/_form.html.twig', {'button_label': 'Atualizar'}) }}
+    </div>
 {% endblock %}
