--- a/templates/gerentes/show.html.twig
+++ b/templates/gerentes/show.html.twig
@@ -3,33 +3,38 @@
 {% block title %}Gerentes{% endblock %}
 
 {% block body %}
-    <h1>Gerentes</h1>
+    <div class="card">
+        <div class="card-header">
+            <h5>Editar gerente</h5>
+        </div>
+        <div class="card-body">
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <th>Id</th>
+                        <td>{{ gerente.id }}</td>
+                    </tr>
+                    <tr>
+                        <th>Nome</th>
+                        <td>{{ gerente.nome }}</td>
+                    </tr>
+                    <tr>
+                        <th>Cpf</th>
+                        <td>{{ gerente.cpf }}</td>
+                    </tr>
+                    <tr>
+                        <th>Telefone</th>
+                        <td>{{ gerente.telefone }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="card-footer d-flex flex-row justify-content-end">
+            <a href="{{ path('app_gerentes_index') }}" class="btn btn-secondary mr-2">Voltar</a>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ gerente.id }}</td>
-            </tr>
-            <tr>
-                <th>Nome</th>
-                <td>{{ gerente.nome }}</td>
-            </tr>
-            <tr>
-                <th>Cpf</th>
-                <td>{{ gerente.cpf }}</td>
-            </tr>
-            <tr>
-                <th>Telefone</th>
-                <td>{{ gerente.telefone }}</td>
-            </tr>
-        </tbody>
-    </table>
-    <div class="d-flex flex-row justify-content-end">
-        <a href="{{ path('app_gerentes_index') }}" class="btn btn-secondary mr-2">Voltar</a>
+            <a href="{{ path('app_gerentes_edit', {'id': gerente.id}) }}" class="btn btn-primary mr-2" >Editar</a>
 
-        <a href="{{ path('app_gerentes_edit', {'id': gerente.id}) }}" class="btn btn-primary mr-2" >Editar</a>
-
-        {{ include('gerentes/_delete_form.html.twig') }}
+            {{ include('gerentes/_delete_form.html.twig') }}
+        </div>
     </div>
 {% endblock %}
